--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -1,3 +1,78 @@
-mixin header()
+mixin header(link)
     header.header 
-        p header
+        nav.header__top 
+            .header__top-body.container
+                .header__soc 
+                    a(href="#!" title="vk").header__soc-item   
+                        img(src="@img/vk.svg", alt="" draggable="false")
+                    a(href="#!" title="telegram").header__soc-item   
+                        img(src="@img/telegram.svg", alt="" draggable="false")
+                    a(href="#!" title="whatsapp").header__soc-item   
+                        img(src="@img/whatsapp.svg", alt="" draggable="false")
+                a(href="mailto:codeit-school@ya.ru").header__mail codeit-school@ya.ru 
+        nav.header__nav
+            .header__nav-body.container
+                a(href="index.html").header__logo.gif
+                    img(src="img/logo.gif", alt="Code it" draggable="false")
+                ul.header__list 
+                    if link === 'home'
+                        li.header__li 
+                            a(href="index.html").header__link.active О школе
+                    else 
+                        li.header__li 
+                            a(href="index.html").header__link О школе
+                    if link === 'who'
+                        li.header__li 
+                            a(href="#!").header__link.active Кто мы
+                    else
+                        li.header__li 
+                            a(href="#!").header__link Кто мы
+                    if link === 'courses'
+                        li.header__li 
+                            a(href="#!").header__link.active Курсы
+                    else 
+                        li.header__li 
+                            a(href="#!").header__link Курсы
+                    if link === 'faq'
+                        li.header__li 
+                            a(href="#!").header__link.active FAQ
+                    else
+                        li.header__li 
+                            a(href="#!").header__link FAQ
+                    if link === 'contacts'
+                        li.header__li 
+                            a(href="#!").header__link.active Контакты
+                    else
+                        li.header__li 
+                            a(href="#!").header__link Контакты
+                button(type='button').header__btn.btn Попробовать бесплатно
+                button.header__button 
+                    span.header__button-line
+        .header__menu
+            ul.header__menu-list 
+                li.header__menu-li 
+                    a(href="#!").header__menu-link О школе 
+                li.header__menu-li 
+                    a(href="#!").header__menu-link Курсы
+                li.header__menu-li 
+                    a(href="#!").header__menu-link Контакты
+                li.header__menu-li 
+                    a(href="#!").header__menu-link FAQ
+            button(type='button').header__menu-btn.btn Попробовать бесплатно
+            .header__menu-soc 
+                a(href="#!" title="instagram").header__menu-soc-item
+                    img(src="@img/instagram.svg", alt="" draggable="false")
+                a(href="#!" title="telegram").header__menu-soc-item
+                    img(src="@img/telegram.svg", alt="" draggable="false")
+                a(href="#!" title="whatsapp").header__menu-soc-item
+                    img(src="@img/whatsapp.svg", alt="" draggable="false")
+                a(href="#!" title="vk").header__menu-soc-item
+                    img(src="@img/vk.svg", alt="" draggable="false")
+            a(href="tel:+79603072757").header__menu-tel +7 960 307 27 57
+            a(href="mailto:codeit-school@ya.ru").header__menu-mail codeit-school@ya.ru 
+            .header__menu-links 
+                a(href="#!").header__menu-p Договор-оферта
+                a(href="#!").header__menu-p Политика конфиденциальности
+                a(href="#!").header__menu-p Обработка персональных данных
+            p.header__menu-p.mb ИП Чугаева Елена Сергеевна
+            p.header__menu-copy © Code It 2022.
