--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     -webkit-tap-highlight-color: transparent;
-    font-family: sans-serif;
+    font-family: 'Jost', sans-serif;
     &:focus,
     &:active{
         outline: none;
@@ -13,6 +13,9 @@
 html,
 body{
     height: 100%;
+}
+body{
+    background: #F4F4F4;
 }
 .wrapper{
     min-height: 100%;
@@ -26,4 +29,33 @@ button{
     background: none;
     border: none;
     cursor: pointer;
+}
+.container{
+    max-width: 1337px;
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+a{
+    text-decoration: none;
+}
+.btn{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 100%;
+    color: #141E2D;
+    padding: 17px 35px;
+    background: #01FAD0;
+    border: 2px solid #141E2D;
+    border-radius: 40px;
+    transition: 300ms ease-out;
+    @include media(768){
+        border: 1px solid #141E2D;
+    }
+    &:hover,
+    &:active{
+        background: #BFFDF2;
+    }
 }
