--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -96,6 +96,8 @@ a{
     opacity: 0;
     visibility: hidden;
     transition: 300ms ease-out;
+    padding: 15px;
+    z-index: 500;
     &.active{
         opacity: 1;
         visibility: visible;
@@ -121,9 +123,26 @@ a{
         border-radius: 40px;
         position: relative;
         z-index: 1;
+        max-width: 726px;
+        width: 100%;
+        @include media(1024){
+            border-radius: 30px;
+        }
+        @include media(576){
+            border-radius: 20px;
+        }
     }
     &__inner{
         padding: 40px;
+        @include media(768){
+            padding: 25px;
+        }
+    }
+    &__header{
+        margin-bottom: 35px;
+        @include media(768){
+            margin-bottom: 15px;
+        }
     }
     &__title{
         font-weight: 600;
@@ -131,11 +150,87 @@ a{
         line-height: 100%;
         margin-bottom: 25px;
         color: #000000;
+        @include media(1375){
+            font-size: 34px;
+            line-height: 100%;
+        }
+        @include media(1024){
+            font-size: 30px;
+            line-height: 100%;
+        }
+        @include media(768){
+            font-size: 27px;
+            line-height: 100%;
+            margin-bottom: 20px;
+        }
+        @include media(576){
+            font-size: 20px;
+            line-height: 100%;
+            margin-bottom: 15px;
+        }
+        @include media(425){
+            margin-bottom: 10px;
+        }
     }
     &__p{
         font-weight: 400;
         font-size: 26px;
         line-height: 100%;
-        color: #000000;        
+        color: #000000;  
+        @include media(1375){
+            font-size: 22px;
+            line-height: 100%;
+        }
+        @include media(768){
+            font-size: 19px;
+            line-height: 100%;
+        }
+        @include media(576){
+            font-size: 16px;
+            line-height: 100%;
+        }  
+    }
+    &__form{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        &-p{
+            font-size: 17px;
+            line-height: 100%;
+            @include media(768){
+                font-size: 10px;
+                line-height: 100%;
+            }
+            @include media(425){
+                font-size: 8px;
+                line-height: 100%;
+            }
+        }
+    }
+    &__input{
+        font-size: 18px;
+        line-height: 100%;
+        background: #FFFFFF;
+        border: 2px solid #141E2D;
+        border-radius: 40px;
+        padding: 21px 24px;
+        height: 60px;
+        @include media(768){
+            border: 1px solid #141E2D;
+            height: 40px;
+        }
+        @include media(576){
+            font-size: 13px;
+            line-height: 100%;
+        }
+    }
+    &__btn{
+        height: 60px;
+        @include media(768){
+            height: 40px;
+        }
+        @include media(576){
+            padding: 10px 17px;
+        }
     }
 }
