--- a/src/index.pug
+++ b/src/index.pug
@@ -15,6 +15,7 @@ html(lang="en")
                 section.section  
                     .section__container.container 
                         .section__inner 
+                            p intro 
                             
             include components/footer 
             +footer
