--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="css/style.min.css")
         link(rel="shortcut icon", href="img/favicon.png", type="image/x-icon")
-        title Home - Code It
+        title Главная - Code It
     body 
         .wrapper 
             include components/header 
