--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -37,6 +37,14 @@ button{
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    &-sm{
+        max-width: 916px;
+        width: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 a{
     text-decoration: none;
@@ -81,6 +89,31 @@ a{
         background: #FFFFFF;
         border: 2px solid #000000;
         border-radius: 40px;
+    }
+}
+.title{
+    font-weight: 600;
+    font-size: 47px;
+    line-height: 100%;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 35px;
+    @include media(1375){
+        font-size: 34px;
+        line-height: 100%;
+    }
+    @include media(1024){
+        font-size: 30px;
+        line-height: 100%;
+    }
+    @include media(768){
+        font-size: 27px;
+        line-height: 100%;
+    }
+    @include media(576){
+        font-size: 20px;
+        line-height: 100%;
+        margin-bottom: 20px;
     }
 }
 .popup{
