--- a/src/about.pug
+++ b/src/about.pug
@@ -15,7 +15,7 @@ html(lang="en")
                 .who
                     .who__body.container-sm 
                         .who__top
-                            .title Наши ценности
+                            p.title Наши ценности
                             p.who__desc Школа Code it! — это место бесконечного творчества и новых решений. Наши программы обучения способствуют формированию цифровой грамотности, функционального и визуального мышления, развитию IT-компетенций и пониманию вычислительных систем. <br><br>Наше будущее неразрывно связано с развитием информационных технологий. Поэтому наша задача — наделить каждого нашего ученика навыками и умениям, которые помогут адаптироваться к постоянно меняющемуся миру. Несмотря на то, что каждый курс имеет свои цели обучения с точки зрения стека знаний, все они имеют общие цели. 
                         .who__info 
                             .who__info-top
@@ -42,7 +42,46 @@ html(lang="en")
                                         p.who__info-item-title Интересы
                                         p.who__info-item-p Увлекаюсь программированием, особенно разработкой игр. В свободное время занимаюсь иллюстрацией. Веду активный образ жизни.        
                             quote.who__info-user-quote.md “Моя мечта — заложить в каждом ребенке возможность стать успешным специалистом в области информационных технологий, чтобы в будущем он смог служить на благо своей страны.”
-                            
+                    .who__body.container-md
+                        .who__top.who__top_mb35
+                            p.title Наша команда
+                        .who__command 
+                            .who__command-item 
+                                .who__command-item-img 
+                                    img(src="@img/person-1.png", alt="" draggable="false")
+                                .who__command-item-content 
+                                    p.who__command-item-name Чугаева Елена
+                                    p.who__command-item-p преподаватель курсов Unity, Web-Design
+                            .who__command-item 
+                                .who__command-item-img 
+                                    img(src="@img/person-2.png", alt="" draggable="false")
+                                .who__command-item-content 
+                                    p.who__command-item-name Чугаева Елена
+                                    p.who__command-item-p куратор
+                            .who__command-item 
+                                .who__command-item-img 
+                                    img(src="@img/person-3.png", alt="" draggable="false")
+                                .who__command-item-content 
+                                    p.who__command-item-name Чугаева Елена
+                                    p.who__command-item-p менеджер по работе с клиентами
+                            .who__command-item 
+                                .who__command-item-img 
+                                    img(src="@img/person-4.png", alt="" draggable="false")
+                                .who__command-item-content 
+                                    p.who__command-item-name Чугаева Елена
+                                    p.who__command-item-p проектный менеджер
+                            .who__command-item 
+                                .who__command-item-img 
+                                    img(src="@img/person-5.png", alt="" draggable="false")
+                                .who__command-item-content 
+                                    p.who__command-item-name Чугаева Елена
+                                    p.who__command-item-p преподаватель
+                            .who__command-item 
+                                .who__command-item-img 
+                                    img(src="@img/person-6.png", alt="" draggable="false")
+                                .who__command-item-content 
+                                    p.who__command-item-name Чугаева Елена
+                                    p.who__command-item-p преподаватель
             include components/footer 
             +footer
         script(src="js/app.min.js") 
