fixed bugs in intro.pug

--- a/src/scss/layout/_intro.scss
+++ b/src/scss/layout/_intro.scss
@@ -12,7 +12,7 @@
         @include media(576){
             padding: 20px 0 35px 10px;
         }
-        @include media(375){
+        @include media(374){
             padding: 30px 20px 20px;
         }
     }
@@ -43,8 +43,10 @@
             min-height: 330px;
             height: 330px;
         }
-        @include media(375){
+        @include media(374){
             padding-top: 0;
+            min-height: 0;
+            height: auto;
         }
     }
     &__title{
@@ -182,7 +184,7 @@
             max-width: 60%;
             width: 100%;
         }
-        @include media(375){
+        @include media(374){
             max-width: 100%;
         }
     }
@@ -210,7 +212,7 @@
             max-width: 170px;   
             min-width: 170px; 
         }
-        @include media(375){
+        @include media(374){
             display: none;
         }
         img{
