--- a/src/scss/themes/_theme.scss
+++ b/src/scss/themes/_theme.scss
@@ -37,6 +37,14 @@ button{
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    &-lg{
+        max-width: 1086px;
+        width: 100%;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
+    }
     &-md{
         max-width: 990px;
         width: 100%;
