--- a/src/components/header.pug
+++ b/src/components/header.pug
@@ -23,7 +23,7 @@ mixin header(link)
                             a(href="index.html").header__link О школе
                     if link === 'who'
                         li.header__li 
-                            a(href="about.html").header__link.active Кто мы
+                            a(href="#!").header__link.active Кто мы
                     else
                         li.header__li 
                             a(href="about.html").header__link Кто мы
@@ -44,20 +44,20 @@ mixin header(link)
                             a(href="#!").header__link.active Контакты
                     else
                         li.header__li 
-                            a(href="#!").header__link Контакты
+                            a(href="contacts.html").header__link Контакты
                 button(type='button' data-target="feedback").open-popup.header__btn.btn Попробовать бесплатно
                 button.header__button 
                     span.header__button-line
         .header__menu
             ul.header__menu-list 
                 li.header__menu-li 
-                    a(href="#!").header__menu-link О школе 
+                    a(href="index.html").header__menu-link О школе 
                 li.header__menu-li 
                     a(href="about.html").header__menu-link Кто мы
                 li.header__menu-li 
                     a(href="#!").header__menu-link Курсы
                 li.header__menu-li 
-                    a(href="#!").header__menu-link Контакты
+                    a(href="contacts.html").header__menu-link Контакты
                 li.header__menu-li 
                     a(href="#!").header__menu-link FAQ
             button(type='button' data-target="feedback").open-popup.header__menu-btn.btn Попробовать бесплатно
