--- a/src/index.pug
+++ b/src/index.pug
@@ -24,7 +24,8 @@ html(lang="en")
                                         button(type="button" data-target="feedback").popup-open.intro__button 11-17 лет 
                                 .intro__img 
                                     img(src="@img/intro-img.png", alt="")
-                            
+                            .intro__content
+                                
             include components/footer 
             +footer
         script(src="js/app.min.js") 
